--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -20,8 +20,8 @@
 }
 
 .header nav {
-    float: right;
     font-size: 100%;
+    margin-left: 32px;
 }
 
 .header nav a {
@@ -35,14 +35,14 @@
     text-decoration: none;
     color: #000;
     will-change: background-color;
-    font-weight: 500;
+    font-weight: 700;
 }
 
 .header nav a:hover,
 .header nav a:active {
-    background: rgba(0, 0, 0, 0.1);
+    background: rgba(0, 0, 0, 0.05);
 }
 
 .header nav a.active {
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.1);
 }
