--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -5,8 +5,20 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding: 16px;
 }
 
 .section {
     margin-top: 16px;
+}
+
+.longSection {
+    margin-top: 16px;
+    line-height: 140%;
+}
+
+@media only screen and (min-width: 900px) {
+    .longSection {
+        width: 55%;
+    }
 }
