--- a/src/routes/portfolio/style.css
+++ b/src/routes/portfolio/style.css
@@ -1,9 +1,21 @@
 .container {
-    padding: 56px 20px;
     min-height: 100%;
     width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .section {
-    margin: 32px 24px;
+    width: 350px;
+    word-break: break-word;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+}
+
+@media only screen and (min-width: 900px) {
+    .section {
+        width: 30%;
+    }
 }
