updates to the site!

--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -1,5 +1,5 @@
 .container {
-    min-height: 100%;
+    min-height: 90%;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -9,12 +9,30 @@
 }
 
 .section {
-    margin-top: 16px;
+    margin-top: 12px;
+}
+
+.nextSection {
+    text-align: center;
+}
+
+.nextSection li {
+    text-align: left;
+    font-size: 16px;
+    margin: 4px 0;
 }
 
 .longSection {
     margin-top: 16px;
     line-height: 140%;
+}
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
 }
 
 @media only screen and (min-width: 900px) {
