--- a/src/routes/portfolio/style.css
+++ b/src/routes/portfolio/style.css
@@ -1,5 +1,5 @@
 .container {
-    min-height: 100%;
+    min-height: 90%;
     width: 100%;
     display: flex;
     align-items: center;
@@ -12,6 +12,23 @@
     display: flex;
     flex-direction: column;
     overflow: auto;
+}
+
+.techList {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.techList li {
+    list-style-type: none;
+    background: #d6f5ff;
+    border-radius: 16px;
+    padding: 0 8px;
+    display: flex;
+    align-items: center;
+    height: 34px;
+    box-shadow: 0px 2px 2px 1px #a9a9a9e3;
+    margin: 8px;
 }
 
 @media only screen and (min-width: 900px) {
