--- a/src/style/index.css
+++ b/src/style/index.css
@@ -22,7 +22,7 @@ body {
     width: 100%;
     padding: 0;
     margin: 0;
-    background: #eeeeee;
+    background: #e3e3e3e3;
     font-family: "Blogger Sans", arial, sans-serif;
     font-weight: 500;
     font-size: 18px;
