--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -35,8 +35,16 @@
     text-align: center;
 }
 
-@media only screen and (min-width: 900px) {
+@media only screen and (max-width: 900px) {
+    .container {
+        height: 120%;
+    }
+
     .longSection {
         width: 55%;
+    }
+
+    .nextSection {
+        text-align: left;
     }
 }
