--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,19 +1,25 @@
 @font-face {
     font-family: "Blogger Sans";
     font-weight: 400;
-    src: url("../assets/fonts/BloggerSans.ttf") format("ttf");
+    src: url("../assets/fonts/BloggerSans.woff") format("woff"),
+        url("../assets/fonts/BloggerSans.woff2") format("woff2"),
+        url("../assets/fonts/BloggerSans.ttf") format("ttf");
 }
 
 @font-face {
     font-family: "Blogger Sans";
     font-weight: 500;
-    src: url("../assets/fonts/BloggerSans-Medium.ttf") format("ttf");
+    src: url("../assets/fonts/BloggerSans-Medium.woff") format("woff"),
+        url("../assets/fonts/BloggerSans-Medium.woff2") format("woff2"),
+        url("../assets/fonts/BloggerSans-Medium.ttf") format("ttf");
 }
 
 @font-face {
     font-family: "Blogger Sans";
     font-weight: 700;
-    src: url("../assets/fonts/BloggerSans-Bold.ttf") format("ttf");
+    src: url("../assets/fonts/BloggerSans-Bold.woff") format("woff"),
+        url("../assets/fonts/BloggerSans-Bold.woff2") format("woff2"),
+        url("../assets/fonts/BloggerSans-Bold.ttf") format("ttf");
 }
 
 html,
@@ -24,7 +30,7 @@ body {
     margin: 0;
     background: #e3e3e3e3;
     font-family: "Blogger Sans", arial, sans-serif;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 18px;
     color: #333;
     -webkit-font-smoothing: antialiased;
@@ -38,7 +44,6 @@ a {
 
 p {
     font-size: 14px;
-    margin: 4px;
 }
 
 * {
