--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,48 +1,48 @@
 .header {
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 56px;
-    padding: 0;
-    background: #d6ffe0;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-    z-index: 50;
-    text-align: right;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 56px;
+  padding: 0;
+  background: #2ec4b6;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  z-index: 50;
+  text-align: right;
 }
 
 .header h1 {
-    float: left;
-    margin: 0;
-    padding: 0 15px;
-    font-size: 24px;
-    line-height: 56px;
-    font-weight: 400;
+  float: left;
+  margin: 0;
+  padding: 0 15px;
+  font-size: 24px;
+  line-height: 56px;
+  font-weight: 400;
 }
 
 .header nav {
-    font-size: 100%;
-    margin-left: 32px;
+  font-size: 100%;
+  margin-left: 32px;
 }
 
 .header nav a {
-    display: inline-block;
-    height: 56px;
-    line-height: 56px;
-    padding: 0 15px;
-    min-width: 50px;
-    text-align: center;
-    background: rgba(255, 255, 255, 0);
-    text-decoration: none;
-    color: #000;
-    will-change: background-color;
-    font-weight: 700;
+  display: inline-block;
+  height: 56px;
+  line-height: 56px;
+  padding: 0 15px;
+  min-width: 50px;
+  text-align: center;
+  background: rgba(255, 255, 255, 0);
+  text-decoration: none;
+  color: #f6f7f8;
+  will-change: background-color;
+  font-weight: 700;
 }
 
 .header nav a:hover,
 .header nav a:active {
-    background: rgba(0, 0, 0, 0.05);
+  background: rgba(0, 0, 0, 0.05);
 }
 
 .header nav a.active {
-    background: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.1);
 }
