--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,55 +1,55 @@
 @font-face {
-    font-family: "Blogger Sans";
-    font-weight: 400;
-    src: url("../assets/fonts/BloggerSans.woff") format("woff"),
-        url("../assets/fonts/BloggerSans.woff2") format("woff2"),
-        url("../assets/fonts/BloggerSans.ttf") format("ttf");
+  font-family: "Blogger Sans";
+  font-weight: 400;
+  src: url("../assets/fonts/BloggerSans.woff") format("woff"),
+    url("../assets/fonts/BloggerSans.woff2") format("woff2"),
+    url("../assets/fonts/BloggerSans.ttf") format("ttf");
 }
 
 @font-face {
-    font-family: "Blogger Sans";
-    font-weight: 500;
-    src: url("../assets/fonts/BloggerSans-Medium.woff") format("woff"),
-        url("../assets/fonts/BloggerSans-Medium.woff2") format("woff2"),
-        url("../assets/fonts/BloggerSans-Medium.ttf") format("ttf");
+  font-family: "Blogger Sans";
+  font-weight: 500;
+  src: url("../assets/fonts/BloggerSans-Medium.woff") format("woff"),
+    url("../assets/fonts/BloggerSans-Medium.woff2") format("woff2"),
+    url("../assets/fonts/BloggerSans-Medium.ttf") format("ttf");
 }
 
 @font-face {
-    font-family: "Blogger Sans";
-    font-weight: 700;
-    src: url("../assets/fonts/BloggerSans-Bold.woff") format("woff"),
-        url("../assets/fonts/BloggerSans-Bold.woff2") format("woff2"),
-        url("../assets/fonts/BloggerSans-Bold.ttf") format("ttf");
+  font-family: "Blogger Sans";
+  font-weight: 700;
+  src: url("../assets/fonts/BloggerSans-Bold.woff") format("woff"),
+    url("../assets/fonts/BloggerSans-Bold.woff2") format("woff2"),
+    url("../assets/fonts/BloggerSans-Bold.ttf") format("ttf");
 }
 
 html,
 body {
-    height: 100%;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    background: #e3e3e3e3;
-    font-family: "Blogger Sans", arial, sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    color: #333;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  background: #010b14;
+  font-family: "Blogger Sans", arial, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  color: #f6f7f8;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 a {
-    color: #147efb;
-    text-decoration: none;
+  color: #147efb;
+  text-decoration: none;
 }
 
 p {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 #app {
-    height: 100%;
+  height: 100%;
 }
