--- a/src/style/index.css
+++ b/src/style/index.css
@@ -28,7 +28,7 @@ body {
   width: 100%;
   padding: 0;
   margin: 0;
-  background: #010b14;
+  background: #01090f;
   font-family: "Blogger Sans", arial, sans-serif;
   font-weight: 400;
   font-size: 18px;
