--- a/src/routes/portfolio/style.css
+++ b/src/routes/portfolio/style.css
@@ -29,7 +29,7 @@
   align-items: center;
   height: 34px;
   box-shadow: 0px 2px 2px 1px #000;
-  color: #f6f7f8;
+  color: #01090f;
   margin: 8px;
 }
 
