--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 56px;
   padding: 0;
-  background: #2ec4b6;
+  background: #2a9d8f;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   z-index: 50;
   text-align: right;
@@ -32,6 +32,7 @@
   min-width: 50px;
   text-align: center;
   background: rgba(255, 255, 255, 0);
+  text-shadow: 1px 1px 2px rgb(0, 0, 0, 0.66);
   text-decoration: none;
   color: #f6f7f8;
   will-change: background-color;
