--- a/src/routes/contact/style.css
+++ b/src/routes/contact/style.css
@@ -1,22 +1,23 @@
 .container {
-    min-height: 90%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    font-size: 28px;
+  min-height: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 28px;
+  text-shadow: 1px 1px 2px rgb(0, 0, 0, 0.66);
 }
 
 .contactList {
-    text-align: left;
+  text-align: left;
 }
 
 .contactList li {
-    margin: 2px 0;
+  margin: 2px 0;
 }
 
 @media only screen and (max-width: 900px) {
-    .container {
-        font-size: 20px;
-    }
+  .container {
+    font-size: 20px;
+  }
 }
