--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -1,50 +1,69 @@
+.outerContainer {
+  min-height: 100%;
+  background-image: url("../../assets/blob-scene-haikei.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .container {
-    min-height: 90%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 16px;
+  min-height: 90%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  flex-direction: column;
+  padding: 16px;
+  text-shadow: 1px 1px 2px rgb(0, 0, 0, 0.66);
 }
 
 .section {
-    margin-top: 12px;
+  margin-top: 12px;
 }
 
 .nextSection {
-    text-align: center;
+  text-align: center;
+  max-width: 320px;
 }
 
 .nextSection li {
-    text-align: left;
-    font-size: 16px;
-    margin: 4px 0;
+  text-align: left;
+  font-size: 16px;
+  margin: 4px 0;
 }
 
 .longSection {
-    margin-top: 16px;
-    line-height: 140%;
+  margin-top: 16px;
+  line-height: 140%;
 }
 
 .footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
 }
 
 @media only screen and (max-width: 900px) {
-    .container {
-        height: 120%;
-    }
+  .outerContainer {
+    background-image: url("../../assets/blob-scene-haikei-vertical.svg");
+  }
 
-    .longSection {
-        width: 55%;
-    }
+  .container {
+    min-height: 80%;
+  }
 
-    .nextSection {
-        text-align: left;
-    }
+  .longSection {
+    width: 55%;
+  }
+
+  .nextSection {
+    text-align: left;
+  }
+
+  .footer p {
+    font-size: 14px;
+    margin: 4px 0px;
+  }
 }
