--- a/src/routes/notfound/style.css
+++ b/src/routes/notfound/style.css
@@ -1,4 +1,5 @@
 .notfound {
-    padding: 0 5%;
-    margin: 100px 0;
+  padding: 0 5%;
+  margin: 100px 0;
+  text-shadow: 1px 1px 2px rgb(0, 0, 0, 0.66);
 }
