--- a/src/routes/portfolio/style.css
+++ b/src/routes/portfolio/style.css
@@ -5,10 +5,12 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  text-shadow: 1px 1px 2px rgb(0, 0, 0, 0.66);
 }
 
 .section {
   width: 350px;
+  min-height: 300px;
   word-break: break-word;
   display: flex;
   flex-direction: column;
@@ -28,7 +30,8 @@
   display: flex;
   align-items: center;
   height: 34px;
-  box-shadow: 0px 2px 2px 1px #000;
+  box-shadow: -2px 2px 2px 0px rgb(0, 0, 0, 0.66);
+  text-shadow: none;
   color: #01090f;
   margin: 8px;
 }
